syntax = "proto3";

option java_package = "com.ljh.gamedemo.proto.protoc";
option java_outer_classname = "EquipProto";

// protoc --java_out=src/main/java src/main/java/com/ljh/gamedemo/proto/Equip.proto

message Equip{

    int64 id = 1;
    int64 equipId = 2;
    string name = 3;
    int32 type = 4;
    int32 part = 5;
    int32 level = 6;
    int32 durability = 7;
    int32 aUp = 8;
    int32 spUp = 9;
    int32 hpUp = 10;
    int32 armor = 11;
    int32 state = 12;
    int32 minTrans = 13;

}